--- a/assets/css/playoffs.css
+++ b/assets/css/playoffs.css
@@ -32,4 +32,5 @@ h3 {
     color:#fff;
 }
 td.icgb 	{ background-color:#E3E3E3;font-weight:bold;text-align:center;color:#000000; border-left-width:1px; border-left-style:solid; border-left-color:#E3E3E3; border-top-width:1px; border-top-style:solid; border-top-color:#E3E3E3; }
-.s1 		{ background-color:#E3E3E3;font-weight:normal;text-align:right;color:#000000;padding-right:4px; }
+.s1 		{ font-size:13px;background-color:#E3E3E3;font-weight:normal;text-align:right;color:#000000;padding-right:4px; }
+.s2 		{ font-size:13px;background-color:#C2C2C2;font-weight:normal;text-align:right;color:#000000;padding-right:4px; }
