--- a/assets/css/series.css
+++ b/assets/css/series.css
@@ -6,9 +6,9 @@
     height:1%;
     text-align:left;
 }
-.matchup { width:935px; }
+.matchup { width:100%; }
 .matchup .matchbox {
-	position:relative; float:left; border:1px solid black;padding:18px 5px 5px 5px; width:413px; overflow:hidden; height:48px;text-align:left; 
+    position:relative; float:left; border:1px solid black;padding:18px 5px 5px 3px; width:45%; overflow:hidden; height:48px;text-align:left;
 }
 .matchup .matchlogo {
 	position:absolute; top:0; z-indez:1; width:413px; height:75px; 
@@ -21,11 +21,11 @@
 .matchup .matchscore { width:50px;font-size:3em; text-align:center; }
 .matchup .matchteam { padding-top:6px;width:280px;}
 .matchup .matchteam  a { font-size:2em;}
-.matchup .matchrecord { float:left; padding:5px; width:415px;font-size:1em;}
+.matchup .matchrecord { float:left; padding:5px; width:45%;font-size:1em;}
 
 #matchbar {
     float:left;
-    width:934px;
+    width:100%;
     height:45px;
     margin:10px 0px 0px 0px;
 }
@@ -40,7 +40,7 @@
 }
 #matchbar_meta div {
 	float:left;
-    width:457px;
+    width:45%;
 	padding:5px;
 	font-size:11px;
 	font-weight:bold;
